--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Minima Demo Site
-author:
+author: Purity Wanjiku
   name: GitHub User
-  email: your-email@domain.com
+  email: pwanjiku@domain.com
 description: >
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -13,10 +13,10 @@ minima:
     - { icon: "github", title: "Minima Theme repository at GitHub", url: "https://github.com/jekyll/minima" }
     - { icon: "x-twitter", title: "Jekyll profile at X (formerly Twitter)", url: "https://x.com/jekyllrb" }
   show_excerpts: true
-  skin: auto # Options: auto, classic, dark, solarized, solarized-light, solarized-dark
+  skin: solarized # Options: auto, classic, dark, solarized, solarized-light, solarized-dark
 
 # Build settings
-baseurl: /minima-demo
+baseurl: /static-demo
 remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
